<resources>
    <string name="app_name">GroceryStore-Android</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="login_label">Login</string>
    <string name="update_label">Update Account</string>
    <string name="customerMenu_label">Menu</string>
    <string name="signIn_label">Sign Up</string>
    <string name="viewOrder_label">View Orders</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="my_orders">My Orders</string>
    <string name="items">Items</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="type">Type</string>
    <string name="status">Status</string>
    <string name="total">Total</string>


    <string-array name="orderType">
        <item>Pick up</item>
        <item>Delivery</item>
    </string-array>



</resources>