<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/Login">

    <fragment
        android:id="@+id/Login"
        android:name="ca.mcgill.ecse321.grocerystore.Login"
        android:label="@string/login_label"
        tools:layout="@layout/login">
        <action
            android:id="@+id/action_Login_to_SignIn"
            app:destination="@id/SignInCustomer" />

        <action
            android:id="@+id/action_Login_to_Menu"
            app:destination="@id/CustomerMenu" />
    </fragment>


    <fragment
        android:id="@+id/SignInCustomer"
        android:name="ca.mcgill.ecse321.grocerystore.SignIn"
        android:label="@string/signIn_label"
        tools:layout="@layout/sign_in_customer">

        <action
            android:id="@+id/action_SignIn_to_Login"
            app:destination="@id/Login" />
    </fragment>

    <fragment
        android:id="@+id/UpdateCustomer"
        android:name="ca.mcgill.ecse321.grocerystore.UpdateCustomer"
        android:label="@string/update_label"
        tools:layout="@layout/update_customer">

        <action
            android:id="@+id/action_Update_to_Login"
            app:destination="@id/Login" />
    </fragment>

    <fragment
        android:id="@+id/CustomerMenu"
        android:name="ca.mcgill.ecse321.grocerystore.CustomerMenu"
        android:label="@string/customerMenu_label"
        tools:layout="@layout/customer_menu">

        <action
            android:id="@+id/action_Menu_to_Update"
            app:destination="@id/UpdateCustomer" />

        <action
            android:id="@+id/action_Menu_to_Orders"
            app:destination="@id/ViewOrder" />

        <action
            android:id="@+id/action_CustomerMenu_to_ViewItem"
            app:destination="@id/ViewItem" />

    </fragment>

    <fragment
        android:id="@+id/ViewOrder"
        android:name="ca.mcgill.ecse321.grocerystore.ViewOrder"
        android:label="@string/viewOrder_label"
        tools:layout="@layout/order_view">
    </fragment>


    <fragment
        android:name="ca.mcgill.ecse321.grocerystore.ItemView"
        android:label="View Items"
        android:id="@+id/ViewItem"
        tools:layout="@layout/itemview"/>

</navigation>