<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".UpdateCustomer">

    <Button
        android:id="@+id/updateCustomer"
        android:layout_width="173dp"
        android:layout_height="55dp"
        android:layout_marginBottom="216dp"
        android:onClick="updateCustomer"
        android:text="Update"
        app:iconTint="#9E9393"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/NameUpdate"
        android:layout_width="388dp"
        android:layout_height="47dp"
        android:hint="@string/name"
        android:textColor="#F7292626"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.371" />

    <EditText
        android:id="@+id/AddressUpdate"
        android:layout_width="388dp"
        android:layout_height="47dp"
        android:hint="@string/address"
        android:textColor="#F7292626"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44" />

    <EditText
        android:id="@+id/ConfirmPasswordUpdate"
        android:layout_width="388dp"
        android:layout_height="47dp"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:textColor="#F7292626"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.577" />

    <EditText
        android:id="@+id/PasswordUpdate"
        android:layout_width="388dp"
        android:layout_height="47dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:text=""
        android:textColor="#F7292626"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.508" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="249dp"
        android:layout_height="80dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="137dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="83dp"
        android:lineSpacingExtra="34sp"
        android:text="Update Account"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#474242"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/NameUpdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/ConfirmPasswordDelete"
        android:layout_width="388dp"
        android:layout_height="47dp"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:textColor="#F7292626"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.872" />

    <EditText
        android:id="@+id/PasswordDelete"
        android:layout_width="388dp"
        android:layout_height="47dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:text=""
        android:textColor="#F7292626"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.804" />

    <Button
        android:id="@+id/deleteCustomer"
        android:layout_width="173dp"
        android:layout_height="55dp"
        android:layout_marginBottom="24dp"
        android:onClick="deleteCustomer"
        android:text="Delete Account"
        app:iconTint="#9E9393"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>